/*
* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at https://mozilla.org/MPL/2.0/.
*
* Copyright (c) 2023-present, Ukama Inc.
*/

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

message UserAccountingEvent{
    string userId = 1 [json_name = "user_id"];
    repeated UserAccounting accounting = 2 [json_name = "user_accounting"];
}

message UserAccounting {
    string id = 1;
    string userId = 2 [json_name = "user_id"];
    string item = 3;
    string description = 4;
    string inventory = 5;
    string opexFee = 6 [json_name = "opex_fee"];
    string vat = 7;
    string effectiveDate = 8 [json_name = "effective_date"];
}